third_party/move/move-compiler-v2/tests/visibility-checker/call_friend_only.exp

Diagnostics:
error: friend function `0xdeadbeef::M::id` cannot be called here because `0xdeadbeef::Q` is not a friend of `0xdeadbeef::M`
   ┌─ tests/visibility-checker/call_friend_only.move:46:9
   │
46 │         M::id(5) + bar()
   │         ^^^^^^^^

error: friend function `0xdeadbeef::M::bar` cannot be called here because `0xdeadbeef::Q` is not a friend of `0xdeadbeef::M`
   ┌─ tests/visibility-checker/call_friend_only.move:46:20
   │
46 │         M::id(5) + bar()
   │                    ^^^^^
